# riseup-vpn-configurator

./: .gitignore  README.md  pyproject.toml  release.sh  riseup-vpn.yaml
.github/workflows/: tests.yaml
monitoring/: monitor_riseupvpn.py
riseup_vpn_configurator/: __init__.py  latency.py  riseup-vpn.yaml  riseup.py
tests/: test_riseupvpn.py
