[tool.poetry]
name = "riseup-vpn-configurator"
version = "0.1.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"
packages = [{include = "riseup_vpn_configurator"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
requests = "^2.28.2"
pyyaml = "^6.0"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
psutil = "^5.9.4"
ping3 = "^4.0.4"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
